# Amorphetude

./: CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Plugins/: AutoWahProcessor.h  BitCrushingProcessor.h  CompressorProcessor.h  EchoProcessor.h  MorphingProcessor.h  OverdriveProcessor.h  ProcessorBase.h
